--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
 .App {
-  text-align: center;
+    background-color: #2b2b37;
+    background-size: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.counterContainer {
+    margin: 0 auto;
+    width: 250px;
+    text-align: center;
+    border: 3px solid #63dafc;
+    border-radius: 10px;
+    height: 220px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.counter {
+    margin: 15px;
+    padding: 20px;
+    font-size: 30px;
+    border: 3px solid #63dafc;
+    border-radius: 10px;
+    background-color: #63dafc;
+    font-weight: 700;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.buttonContainer {
+    margin: 15px;
+    border: 3px solid #63dafc;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    height: 80px;
+    justify-content: space-around;
 }
 
-.App-link {
-  color: #61dafb;
+.maximum {
+    color: red;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.but {
+    outline: none;
+    border-radius: 10px;
+    background-color: #63dafc;
+    font-size: 24px;
+    padding: 5px;
+    border: 3px solid #63dafc;
+    font-weight: 700;
+    color: #2b2b37;
+}
+
+.but:disabled {
+    opacity: 0.6;
 }
