--- a/src/App.css
+++ b/src/App.css
@@ -48,8 +48,15 @@
     border: 3px solid #63dafc;
     font-weight: 700;
     color: #2b2b37;
+    transition: 100ms linear;
 }
 
 .but:disabled {
     opacity: 0.6;
+}
+
+.but:hover {
+    background-color: #2b2b37;
+    color: #63dafc;
+
 }
