--- a/src/App.css
+++ b/src/App.css
@@ -35,8 +35,26 @@
     justify-content: space-around;
 }
 
+.settings {
+    border: 3px solid #63dafc;
+    border-radius: 10px;
+    margin: 15px;
+    color: #63dafc;
+    font-size: 25px;
+}
+
+.settings input {
+    width: 60px;
+    font-size: 20px;
+}
+
 .maximum {
     color: red;
+}
+
+.error {
+    background-color: red;
+    font-weight: 700;
 }
 
 .but {
